--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,45 @@
 
 .header-div {
   display: flex;
-  align-items: center;
-  background-color: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  align-items: baseline;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.header-img {
+  margin-right: 10px;
+}
+
+.header-info {
+  margin-left: auto;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+  padding: 1em;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #d5d4d8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.meme--image {
+  max-width: 100%;
+  border-radius: 10px;
 }
